--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <nav class="navbar">
             <div id="close" class="fas fa-times"></div>
 
-            <a href="#" class="nav_item">home</a>
+            <a href="#home" class="nav_item">home</a>
             <a href="#about" class="nav_item">about</a>
             <a href="#menubody" class="nav_item">menu</a>
             <a href="#" class="nav_item">contact</a>
@@ -43,7 +43,7 @@
 
     <!-- home section starts -->
 
-    <section class="home">
+    <section id="home" class="home">
 
         <div class="content">
             <h1 class="title">Café <span> Coffee </span></h1>
@@ -136,6 +136,8 @@
 
         
     </section>
+
+    <!--  menu section ends -->
 
 
 
