--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
 
         <div class="content">
             <h1 class="title">About</h1>
-            <p class="description"> About Café Coffee
+            <p class="description">
 
-                Welcome to Café Coffee, established in 2024! Nestled in the heart of the city, we are your cozy haven for exceptional coffee experiences. Our passion for coffee drives us to use only ethically sourced beans from the finest coffee-growing regions. Our skilled baristas craft a wide range of beverages, from classic espressos to innovative brews, ensuring a delightful cup for every palate.
+                Café Coffee, established in 2024! Nestled in the heart of the city, we are your cozy haven for exceptional coffee experiences. Our passion for coffee drives us to use only ethically sourced beans from the finest coffee-growing regions. Our skilled baristas craft a wide range of beverages, from classic espressos to innovative brews, ensuring a delightful cup for every palate.
                 
                 More than just great coffee, Café Coffee offers a warm and inviting atmosphere perfect for relaxing, socializing, or working. Join us for regular community events like live music and coffee workshops, and become a part of our vibrant coffee-loving community.
                 
-                Café Coffee – <span>Where every cup tells a story.</span> </p>
+                <span>Café Coffee – Where every cup tells a story.</span> </p>
         </div>
     </section>
 
