--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 
                 More than just great coffee, Café Coffee offers a warm and inviting atmosphere perfect for relaxing, socializing, or working. Join us for regular community events like live music and coffee workshops, and become a part of our vibrant coffee-loving community.
                 
-                <span>Café Coffee – Where every cup tells a story.</span> </p>
+                <span><br>Café Coffee – Where every cup tells a story.</span> </p>
         </div>
     </section>
 
